salesforce invisible fields and Facebook custom domain bug fixes.

--- a/public/src/application.scss
+++ b/public/src/application.scss
@@ -5001,6 +5001,8 @@ a.close{
 
 	#contact-na {
 		padding-top:6px;
+		font-weight: normal;
+		color:#CCC;
 
 		&.salesforce-name {
 			padding-top: 10px;
